--- a/app/views/songs/_form.html.erb
+++ b/app/views/songs/_form.html.erb
@@ -1,8 +1,8 @@
 <%= form_for @song  do |f| %>
+<%= artist_select(@song, @song.artist) %>
   <%= f.label :title %>
   <%= f.text_field :title %><br>
-  <%= f.label :artist_name %>
-  <%= f.text_field :artist_name %>
+  
   <br />
 
   <%= f.submit %>
